tryint out bm25 but doesnt seem to add much

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 PyYAML==6.0.2
+rank-bm25==0.2.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
