--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,7 @@ jobs :
       - name: build
         run: docker compose build
       - name: deploy
+        env:
+          DB: /mnt/ssd/db
+          STORE_LOCATION: /mnt/ssd/store_location
         run: docker compose up -d
