added image entry back because now I understand what it's doing....also added one for the crawler

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,11 @@ jobs :
         env:
           DB: /mnt/ssd/db
           STORE_LOCATION: /mnt/ssd/store_location
+          ESO_NEWS: /mnt/ssd/eso_news
         run: docker compose build
       - name: deploy
         env:
           DB: /mnt/ssd/db
           STORE_LOCATION: /mnt/ssd/store_location
+          ESO_NEWS: /mnt/ssd/eso_news
         run: docker compose up -d
