--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 
 services:
   chromadb:
-    image: chromadb/chroma
+    image: chromadb/chroma:1.0.5
     restart: unless-stopped
     volumes:
       - ${DB}:/data
