--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,19 @@ attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
+Brotli==1.1.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
-Crawl4AI==0.5.0.post8
+Crawl4AI==0.6.3
 cryptography==44.0.2
 cssselect==1.3.0
 dataclasses-json==0.6.7
