--- a/requirements.txt
+++ b/requirements.txt
@@ -31,12 +31,14 @@ Deprecated==1.2.18
 discord.py==2.5.2
 distro==1.9.0
 durationpy==0.9
+emoji==2.14.1
 exceptiongroup==1.2.2
 fake-http-header==0.3.5
 fake-useragent==2.1.0
 fastapi==0.115.12
 faust-cchardet==2.1.19
 filelock==3.18.0
+filetype==1.2.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 fsspec==2025.3.2
@@ -45,6 +47,7 @@ googleapis-common-protos==1.69.2
 greenlet==3.1.1
 grpcio==1.71.0
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
@@ -63,15 +66,17 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kubernetes==32.0.1
-langchain==0.3.23
+langchain==0.3.25
 langchain-chroma==0.2.2
 langchain-community==0.3.21
-langchain-core==0.3.51
+langchain-core==0.3.65
 langchain-openai==0.3.12
 langchain-text-splitters==0.3.8
-langsmith==0.3.26
+langdetect==1.0.9
+langsmith==0.3.45
 litellm==1.66.0
 lxml==5.3.2
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -81,9 +86,11 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.3.2
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==1.26.4
 oauthlib==3.2.2
+olefile==0.47
 onnxruntime==1.21.0
 openai==1.71.0
 opentelemetry-api==1.31.1
@@ -114,13 +121,18 @@ pydantic_core==2.33.1
 pyee==12.1.1
 Pygments==2.19.1
 pyOpenSSL==25.0.0
+pypdf==5.6.0
 pyperclip==1.9.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-oxmsg==0.0.2
 PyYAML==6.0.2
 rank-bm25==0.2.2
+RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
@@ -147,10 +159,13 @@ typer==0.15.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.1
+unstructured==0.17.2
+unstructured-client==0.36.0
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
