--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,26 @@ jobs :
       STORE_LOCATION: /root/store_location
       #CONTEXT_FILES: /root/context_files
       ESO_NEWS: /root/eso_news
+      # Version of Elastic products
+      STACK_VERSION: 9.0.0
+
+      # Set the cluster name
+      CLUSTER_NAME: docker-cluster
+
+      # Set to 'basic' or 'trial' to automatically start the 30-day trial
+      LICENSE: basic
+      #LICENSE: trial
+
+      # Port to expose Elasticsearch HTTP API to the host
+      ES_PORT: 9200
+      #ES_PORT=127.0.0.1:9200
+
+      # Port to expose Kibana to the host
+      KIBANA_PORT: 5601
+      #KIBANA_PORT: 80
+
+      # Increase or decrease based on the available host memory (in bytes)
+      MEM_LIMIT: 1073741824
     steps:
       - uses: actions/checkout@v4
       - name: build
