--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ Deprecated==1.2.18
 discord.py==2.5.2
 distro==1.9.0
 durationpy==0.9
+elastic-transport==8.17.1
+elasticsearch==8.18.1
 emoji==2.14.1
 exceptiongroup==1.2.2
 fake-http-header==0.3.5
@@ -70,6 +72,7 @@ langchain==0.3.25
 langchain-chroma==0.2.2
 langchain-community==0.3.21
 langchain-core==0.3.65
+langchain-elasticsearch==0.3.2
 langchain-openai==0.3.12
 langchain-text-splitters==0.3.8
 langdetect==1.0.9
@@ -142,6 +145,7 @@ rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9
 shellingham==1.5.4
+simsimd==6.4.9
 six==1.17.0
 sniffio==1.3.1
 snowballstemmer==2.2.0
