--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -11,17 +11,19 @@ attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
+Brotli==1.1.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
-Crawl4AI==0.5.0.post8
+Crawl4AI==0.6.3
 cryptography==44.0.2
 cssselect==1.3.0
 dataclasses-json==0.6.7
@@ -29,12 +31,16 @@ Deprecated==1.2.18
 discord.py==2.5.2
 distro==1.9.0
 durationpy==0.9
+elastic-transport==8.17.1
+elasticsearch==8.18.1
+emoji==2.14.1
 exceptiongroup==1.2.2
 fake-http-header==0.3.5
 fake-useragent==2.1.0
 fastapi==0.115.12
 faust-cchardet==2.1.19
 filelock==3.18.0
+filetype==1.2.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 fsspec==2025.3.2
@@ -43,6 +49,7 @@ googleapis-common-protos==1.69.2
 greenlet==3.1.1
 grpcio==1.71.0
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
@@ -61,15 +68,18 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kubernetes==32.0.1
-langchain==0.3.23
+langchain==0.3.25
 langchain-chroma==0.2.2
 langchain-community==0.3.21
-langchain-core==0.3.51
+langchain-core==0.3.65
+langchain-elasticsearch==0.3.2
 langchain-openai==0.3.12
 langchain-text-splitters==0.3.8
-langsmith==0.3.26
+langdetect==1.0.9
+langsmith==0.3.45
 litellm==1.66.0
 lxml==5.3.2
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -79,9 +89,11 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.3.2
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==1.26.4
 oauthlib==3.2.2
+olefile==0.47
 onnxruntime==1.21.0
 openai==1.71.0
 opentelemetry-api==1.31.1
@@ -112,13 +124,18 @@ pydantic_core==2.33.1
 pyee==12.1.1
 Pygments==2.19.1
 pyOpenSSL==25.0.0
+pypdf==5.6.0
 pyperclip==1.9.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-oxmsg==0.0.2
 PyYAML==6.0.2
 rank-bm25==0.2.2
+RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
@@ -128,6 +145,7 @@ rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9
 shellingham==1.5.4
+simsimd==6.4.9
 six==1.17.0
 sniffio==1.3.1
 snowballstemmer==2.2.0
@@ -145,10 +163,13 @@ typer==0.15.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.1
+unstructured==0.17.2
+unstructured-client==0.36.0
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
