env variable comments

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs :
       # Version of Elastic products
       STACK_VERSION: 9.0.0
 
+      #set passwords from host environment variables
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
       KIBANA_PASSWORD: ${KIBANA_PASSWORD}
 
