--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,7 +82,7 @@ services:
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
       - xpack.ml.use_auto_machine_memory_percent=true
-      - network.host 0.0.0.0
+      - network.host=0.0.0.0
     mem_limit: ${MEM_LIMIT}
     ulimits:
       memlock:
@@ -114,6 +114,7 @@ services:
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=config/certs/ca/ca.crt
+      - server.host=0.0.0.0 
     mem_limit: ${MEM_LIMIT}
     healthcheck:
       test:
