restart elasticsearch and kibana containers automatically

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,6 +60,7 @@ services:
       setup:
         condition: service_healthy
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    restart: unless-stopped
     volumes:
       - ${CERTS}:/usr/share/elasticsearch/config/certs
       - ${ESDATA01}:/usr/share/elasticsearch/data
@@ -104,6 +105,7 @@ services:
       es01:
         condition: service_healthy
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+    restart: unless-stopped
     volumes:
       - ${CERTS}:/usr/share/kibana/config/certs
       - ${KIBANADATA}:/usr/share/kibana/data
